--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "mongodb": "https://esm.sh/mongodb@^7.0.0"
+    "mongodb": "https://esm.sh/mongodb@^7.0.0",
+    "next/": "https://esm.sh/next@^16.1.1/"
   }
 }
 </script>
