--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         -webkit-font-smoothing: antialiased;
         background-color: #f8fafc;
         color: #0f172a;
+        margin: 0;
       }
       .custom-scrollbar::-webkit-scrollbar {
         width: 5px;
@@ -38,22 +39,22 @@
         animation: slideIn 0.3s ease-out forwards;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
     "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "mongodb": "https://esm.sh/mongodb@^7.0.0",
-    "next/": "https://esm.sh/next@^16.1.1/"
+    "next/": "https://esm.sh/next@^16.1.1/",
+    "mongodb": "https://esm.sh/mongodb@^7.0.0"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
