--- a/index.html
+++ b/index.html
@@ -4,22 +4,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TutorTrack Pro | Premium Tuition Management</title>
+    <title>TutorTrack Pro | Tuition Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
-      :root {
-        --primary: #6366f1;
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Plus Jakarta Sans', 'sans-serif'],
+            },
+            borderRadius: {
+              '4xl': '2rem',
+              '5xl': '2.5rem',
+            }
+          }
+        }
       }
+    </script>
+    <style type="text/css">
       body {
-        font-family: 'Plus Jakarta Sans', sans-serif;
-        -webkit-font-smoothing: antialiased;
         background-color: #f8fafc;
         color: #0f172a;
         margin: 0;
+        overflow: hidden;
       }
       .custom-scrollbar::-webkit-scrollbar {
-        width: 5px;
+        width: 6px;
       }
       .custom-scrollbar::-webkit-scrollbar-track {
         background: transparent;
@@ -31,32 +42,32 @@
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
         background: #cbd5e1;
       }
-      @keyframes slideIn {
-        from { transform: translateY(10px); opacity: 0; }
+      @keyframes slideUp {
+        from { transform: translateY(20px); opacity: 0; }
         to { transform: translateY(0); opacity: 1; }
       }
-      .animate-slide-in {
-        animation: slideIn 0.3s ease-out forwards;
+      .animate-slide-up {
+        animation: slideUp 0.4s cubic-bezier(0, 0, 0.2, 1) forwards;
       }
     </style>
     <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom": "https://esm.sh/react-dom@^19.2.3",
-    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.473.0",
+    "recharts": "https://esm.sh/recharts@2.15.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "next/": "https://esm.sh/next@^16.1.1/",
-    "mongodb": "https://esm.sh/mongodb@^7.0.0"
+    "mongodb": "https://esm.sh/mongodb@^7.0.0",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
