--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TutorTrack Pro | Tuition Tracker</title>
+    <title>TutorTrack Pro | Premium Tuition Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
@@ -28,6 +28,7 @@
         color: #0f172a;
         margin: 0;
         overflow: hidden;
+        font-family: 'Plus Jakarta Sans', sans-serif;
       }
       .custom-scrollbar::-webkit-scrollbar {
         width: 6px;
@@ -59,9 +60,9 @@
     "lucide-react": "https://esm.sh/lucide-react@0.473.0",
     "recharts": "https://esm.sh/recharts@2.15.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "next/": "https://esm.sh/next@^16.1.1/",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "mongodb": "https://esm.sh/mongodb@^7.0.0",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "next/": "https://esm.sh/next@^16.1.1/"
   }
 }
 </script>
