--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TutorTrack Pro | Premium Tuition Tracker</title>
+    <title>TutorTrack Pro | Premium Tuition Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
@@ -17,6 +16,9 @@
             borderRadius: {
               '4xl': '2rem',
               '5xl': '2.5rem',
+            },
+            colors: {
+              primary: '#6366f1',
             }
           }
         }
@@ -27,8 +29,8 @@
         background-color: #f8fafc;
         color: #0f172a;
         margin: 0;
-        overflow: hidden;
         font-family: 'Plus Jakarta Sans', sans-serif;
+        -webkit-font-smoothing: antialiased;
       }
       .custom-scrollbar::-webkit-scrollbar {
         width: 6px;
@@ -44,7 +46,7 @@
         background: #cbd5e1;
       }
       @keyframes slideUp {
-        from { transform: translateY(20px); opacity: 0; }
+        from { transform: translateY(15px); opacity: 0; }
         to { transform: translateY(0); opacity: 1; }
       }
       .animate-slide-up {
@@ -57,12 +59,12 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.473.0",
-    "recharts": "https://esm.sh/recharts@2.15.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@0.473.0?external=react",
+    "recharts": "https://esm.sh/recharts@2.15.0?external=react,react-dom",
     "react/": "https://esm.sh/react@^19.2.3/",
+    "next/": "https://esm.sh/next@^16.1.1/",
     "mongodb": "https://esm.sh/mongodb@^7.0.0",
-    "next/": "https://esm.sh/next@^16.1.1/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
